# Inventory_Management_RFID

./: .gitignore  README.md
src/: CMakeLists.txt  functs.c  functs.h  gpio_led.h  inventory.c  inventory.h  keypad_irq.c  keypad_irq.h  liquid_crystal_i2c.c  liquid_crystal_i2c.h  main.c  nfc_enums.h  nfc_rfid.c  nfc_rfid.h
